# IPC

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
IPC_benchmark/: CMakeLists.txt  benchmark.cpp
IPC_benchmark/includes/: benchmark_helper.h  error_handler.h
IPC_benchmark/src/: shm_benchmark_helper.cpp  socket_benchmark_helper.cpp
IPC_shm/: CMakeLists.txt  shm_queue.c  shm_queue.h  test.c
IPC_shm/benchmark/: CMakeLists.txt  shm_benchmark.cpp
IPC_socket/: CMakeLists.txt  socket_pipe.c  socket_pipe.h  test.c
IPC_socket/benchmark/: CMakeLists.txt  socket_benchmark.cpp
